# My-Projects

Bar Code Reader/: CMakeLists.txt  main.cpp
Bar Code Reader/include/: QRCodeReader.h
Bar Code Reader/src/: QRCodeReader.cpp
